--- a/views/form.njk
+++ b/views/form.njk
@@ -4,6 +4,7 @@
 <h1>Form</h1>
 {% if fname and lname and age %}
 <p>Hello {{ fname }}  {{ lname }}! You are {{age}} years old</p>
+{% endif %}
 <form>
     <p>
     <label for="fname">First name</label>
@@ -25,4 +26,5 @@
      </p>
 
 </form>
+
 {% endblock %}
