--- a/views/movies/index.njk
+++ b/views/movies/index.njk
@@ -12,7 +12,7 @@
                <th>ID</th>
                <th>Name</th>
                <th>Year</th>
-               <th>Description</th>
+               <th>Actions</th>
              </thead>
               <tbody>
                {% for movie in movies %}
@@ -20,7 +20,13 @@
                     <td>{{movie.id}}</td>
                     <td>{{ movie.name }}</td>
                     <td>{{ movie.year }}</td>
-                    <td>{{ movie.description }}</td>
+                    <td>
+
+                        <a href="/movies/view?id={{movie.id}}">View</a>
+                        <a href="/movies/edit/{{movie.id}}">Edit</a>
+                        <a href="/movies/delete/{{movie.id}}">Delete</a>
+
+                    </td>
                </tr>
                {% endfor %}
               </tbody>
