register & login & logout

--- a/views/auth/register.njk
+++ b/views/auth/register.njk
@@ -1,7 +1,7 @@
 {% extends "partials/layout.njk" %}
-{% block title %}Add movie{%endblock%}
+{% block title %}Register{%endblock%}
 {% block content %}
-   <form action="/movies/add" method="POST">
+   <form action="/register" method="POST">
     <input type="name" placeholder="Name" name="name">
     <input type="email" placeholder="Email" name="email">
     <input type="password" placeholder="Password" name="password">
