--- a/views/movies/edit.njk
+++ b/views/movies/edit.njk
@@ -1,10 +1,19 @@
-{% extends "partials/layout.njk" %}
-{% block title %}Add movie{%endblock%}
-{% block content %}
-   <form action="/movies/edit/{{movie.id}}" method="POST">
-    <input type="text" placeholder="Movie name" name="movie" value="{{movie.name}}">
-    <input type="number" placeholder="Movie year" name="year" value="{{movie.year}}">
-    <textarea name="description" placeholder="Movie description">{{movie.description}}</textarea>
-    <input type="submit" value="Update">
-   </form>
-{% endblock %}
+ {% extends "partials/layout.njk"%}
+    {% block title %} add{% endblock %}
+     {% block content %}
+    <form action="/movies/edit/{{movie.id}}" method="POST">
+    <div class="mb-3">
+        <label for="Name" class="form-label">Name</label>
+       <input id="Name" class="form-control" type="text" placeholder="Movie name" name= "Movie name">
+        </div>
+        <div class="mb-3">
+        <label for="Year" class="form-label">Year</label>
+       <input id="Year" class="form-control" type="number" placeholder="Movie year" name= "Year">
+        </div>
+        <div class="mb-3">
+        <label for="Description" class="form-label">Description</label>
+       <input id="Description" class="form-control" type="text" placeholder="Movie Description" name= "Description">
+        </div>
+        <input type="Submit" value = "Update">
+    </form>
+    {% endblock %}
