--- a/views/movies/view.njk
+++ b/views/movies/view.njk
@@ -1,14 +1,8 @@
 {% extends "partials/layout.njk" %}
 {% block title %}Add movie{%endblock%}
 {% block content %}
-
- <style>
-          table, th, td {
-               border: 1px solid black
-          }
-     </style>
-     
-  <table>
+  <table class="table table-striped table-hover table-bordered">
+    
     <tbody>
         <tr>
             <th>ID</th>
